crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/array_length/incompatible_operator_rational/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 6020] Error: Operator / not compatible with types rational_const 1 / 3 and uint256
    ╭─[input.sol:10:13]
    │
 10 │     uint256[(2 / 6) / B] x;
    │             ─────┬─────  
    │                  ╰─────── Error occurred here.
────╯
